[gd_scene load_steps=9 format=3 uid="uid://c5ti3c74ggtj"]

[ext_resource type="Texture2D" uid="uid://ddmw17cae58fo" path="res://Assets/Boulder Sprites.png" id="1_0fbur"]
[ext_resource type="Script" path="res://Objects/boulder.gd" id="1_icofg"]
[ext_resource type="Script" path="res://Scripts/Classes/audio_library.gd" id="2_26uea"]
[ext_resource type="Script" path="res://Scripts/Classes/sound_effect.gd" id="3_bup1w"]
[ext_resource type="AudioStream" uid="uid://cmhog23ndhjrk" path="res://Sfx/boulder hit.wav" id="4_x77hr"]

[sub_resource type="Resource" id="Resource_ery4a"]
script = ExtResource("3_bup1w")
tag = "hit"
stream = ExtResource("4_x77hr")

[sub_resource type="Resource" id="Resource_vywux"]
script = ExtResource("2_26uea")
sound_effects = Array[ExtResource("3_bup1w")]([SubResource("Resource_ery4a")])

[sub_resource type="CircleShape2D" id="CircleShape2D_3lnbd"]
radius = 9.0

[node name="Boulder" type="CharacterBody2D" groups=["Enemy"]]
z_index = 2
collision_layer = 2
collision_mask = 0
script = ExtResource("1_icofg")
sfxs = SubResource("Resource_vywux")

[node name="BoulderSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_0fbur")
region_enabled = true
region_rect = Rect2(0, 0, 24, 24)

[node name="HurtColl" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3lnbd")

[node name="RayCast1" type="RayCast2D" parent="."]
scale = Vector2(1e-05, 1)
target_position = Vector2(12, 0)

[node name="RayCast2" type="RayCast2D" parent="."]
target_position = Vector2(0, 12)
